--- a/docs/event-catalog/daily.data.workout_stream.unavailable.mdx
+++ b/docs/event-catalog/daily.data.workout_stream.unavailable.mdx
@@ -70,25 +70,25 @@ Slug for designated sport
 <ResponseExample>
 ```json Example
 {
-  "event_type": "daily.data.workout_stream.unavailable",
-  "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
-  "user_id": "fac593ed-f371-4aea-9210-9332f1b19bec",
   "client_user_id": "3Zru4O8cBEiwGTsXgUQGaQ==",
   "data": {
-    "user_id": "8c318603-af64-45b5-a0ef-ae49c2a37992",
-    "workout_id": "d5c03b45-c9e4-4ce4-943f-c30e9c460d0c",
     "message": "The stream for this workout is not available.",
     "provider": {
+      "logo": "https://logo_url.com",
       "name": "Oura",
-      "slug": "oura",
-      "logo": "https://logo_url.com"
+      "slug": "oura"
     },
     "sport": {
       "id": 1,
       "name": "Running",
       "slug": "running"
-    }
-  }
+    },
+    "user_id": "1449752e-0d8a-40e0-9206-91ab099b2537",
+    "workout_id": "185d0f34-dfc0-429f-84f9-b24030914bdd"
+  },
+  "event_type": "daily.data.workout_stream.unavailable",
+  "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
+  "user_id": "fac593ed-f371-4aea-9210-9332f1b19bec"
 }
 ```
 </ResponseExample>
