--- a/docs/event-catalog/daily.data.blood_oxygen.created.mdx
+++ b/docs/event-catalog/daily.data.blood_oxygen.created.mdx
@@ -23,14 +23,23 @@ Constant: `daily.data.blood_oxygen.created`
 <Expandable title="TimeseriesData" defaultOpen="true">
 <ResponseField name="data" type="ClientFacingTimeseries[]" required="true">
 <Expandable title="Item Schema: ClientFacingTimeseries" defaultOpen="true">
-<ResponseField name="id" type="integer | null">
+<ResponseField name="id" type="anyOf | null">
 Deprecated
+Any of:
+* integer
+* null
 </ResponseField>
-<ResponseField name="timezone_offset" type="integer | null">
+<ResponseField name="timezone_offset" type="anyOf | null">
 Time zone UTC offset in seconds. Positive offset indicates east of UTC; negative offset indicates west of UTC; and null indicates the time zone information is unavailable at source.
+Any of:
+* integer
+* null
 </ResponseField>
-<ResponseField name="type" type="string | null">
+<ResponseField name="type" type="anyOf | null">
 The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+Any of:
+* string
+* null
 </ResponseField>
 <ResponseField name="unit" type="string" required="true">
 The unit of the value. We use SI units where possible, e.g. mmol/L for glucose/cholesterol, bpm for heart rate, etc.
@@ -53,8 +62,11 @@ Provider slug. e.g., `oura`, `fitbit`, `garmin`.
 <ResponseField name="type" type="string | null">
 The type of the data source (app or device) by which the summary or the timeseries data were recorded. This defaults to `unknown` when Vital cannot extract or infer that information
 </ResponseField>
-<ResponseField name="app_id" type="string | null">
+<ResponseField name="app_id" type="anyOf | null">
 The identifier of the app which recorded this summary. This is only applicable to multi-source providers like Apple Health and Android Health Connect.
+Any of:
+* string
+* null
 </ResponseField>
 <ResponseField name="name" type="string" required="true">
 [⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
@@ -87,32 +99,32 @@ URL for source logo
 <ResponseExample>
 ```json Example
 {
-  "event_type": "daily.data.blood_oxygen.created",
-  "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
-  "user_id": "fac593ed-f371-4aea-9210-9332f1b19bec",
   "client_user_id": "3Zru4O8cBEiwGTsXgUQGaQ==",
   "data": {
     "data": [
       {
         "timestamp": "2023-02-13T14:30:52+00:00",
         "timezone_offset": null,
-        "value": 98,
         "type": null,
-        "unit": "%"
+        "unit": "%",
+        "value": 98
       }
     ],
-    "source_id": 1,
+    "provider": {
+      "logo": "https://logo_url.com",
+      "name": "Oura",
+      "slug": "oura"
+    },
     "source": {
       "provider": "oura",
       "type": "ring"
     },
-    "provider": {
-      "name": "Oura",
-      "slug": "oura",
-      "logo": "https://logo_url.com"
-    },
-    "user_id": "9ffa2c04-a8d7-4e16-9856-a57dcb5b7534"
-  }
+    "source_id": 1,
+    "user_id": "1f3c85aa-898f-4442-aa1c-dc7e3ff71ac0"
+  },
+  "event_type": "daily.data.blood_oxygen.created",
+  "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
+  "user_id": "fac593ed-f371-4aea-9210-9332f1b19bec"
 }
 ```
 </ResponseExample>
