Update Timeseries Endpoint Docs from fa97fa259d83f8020e34eb2efc23574b837053d8

--- a/docs/api-reference/timeseries-grouped/cholesterol.mdx
+++ b/docs/api-reference/timeseries-grouped/cholesterol.mdx
@@ -111,38 +111,38 @@ fmt.Printf("Received data %s\n", response)
   "groups": {
     "oura": [
       {
-        "source": {
-          "provider": "oura",
-          "type": "ring"
-        },
         "data": [
           [
             {
               "timestamp": "2023-02-13T14:30:52+00:00",
-              "value": 0.6,
               "type": "cholesterol/ldl",
-              "unit": "mmol/L"
+              "unit": "mmol/L",
+              "value": 0.6
             },
             {
               "timestamp": "2023-02-13T14:30:52+00:00",
-              "value": 0.2,
               "type": "cholesterol/hdl",
-              "unit": "mmol/L"
+              "unit": "mmol/L",
+              "value": 0.2
             },
             {
               "timestamp": "2023-02-13T14:30:52+00:00",
-              "value": 0.7,
               "type": "cholesterol/total",
-              "unit": "mmol/L"
+              "unit": "mmol/L",
+              "value": 0.7
             },
             {
               "timestamp": "2023-02-13T14:30:52+00:00",
-              "value": 0.7,
               "type": "cholesterol/triglycerides",
-              "unit": "mmol/L"
+              "unit": "mmol/L",
+              "value": 0.7
             }
           ]
-        ]
+        ],
+        "source": {
+          "provider": "oura",
+          "type": "ring"
+        }
       }
     ]
   }
