--- a/docs/api-reference/timeseries-grouped/electrocardiogram-voltage.mdx
+++ b/docs/api-reference/timeseries-grouped/electrocardiogram-voltage.mdx
@@ -111,18 +111,18 @@ fmt.Printf("Received data %s\n", response)
   "groups": {
     "oura": [
       {
-        "source": {
-          "provider": "oura",
-          "type": "ring"
-        },
         "data": [
           {
             "timestamp": "2023-02-13T14:30:52+00:00",
-            "value": -373,
             "type": "lead_1",
-            "unit": "mV"
+            "unit": "mV",
+            "value": -373
           }
-        ]
+        ],
+        "source": {
+          "provider": "oura",
+          "type": "ring"
+        }
       }
     ]
   }
