--- a/docs/api-reference/timeseries-grouped/glucose.mdx
+++ b/docs/api-reference/timeseries-grouped/glucose.mdx
@@ -111,18 +111,18 @@ fmt.Printf("Received data %s\n", response)
   "groups": {
     "oura": [
       {
-        "source": {
-          "provider": "oura",
-          "type": "ring"
-        },
         "data": [
           {
             "timestamp": "2023-02-13T14:30:52+00:00",
-            "value": 0.5,
             "type": "automatic | manual_scan",
-            "unit": "mmol/L"
+            "unit": "mmol/L",
+            "value": 0.5
           }
-        ]
+        ],
+        "source": {
+          "provider": "oura",
+          "type": "ring"
+        }
       }
     ]
   }
