--- a/docs/api-reference/timeseries-grouped/hrv.mdx
+++ b/docs/api-reference/timeseries-grouped/hrv.mdx
@@ -111,17 +111,17 @@ fmt.Printf("Received data %s\n", response)
   "groups": {
     "oura": [
       {
-        "source": {
-          "provider": "oura",
-          "type": "ring"
-        },
         "data": [
           {
             "timestamp": "2023-02-13T14:30:52+00:00",
-            "value": 48,
-            "unit": "rmssd"
+            "unit": "rmssd",
+            "value": 48
           }
-        ]
+        ],
+        "source": {
+          "provider": "oura",
+          "type": "ring"
+        }
       }
     ]
   }
