--- a/docs/api-reference/introspection/historical-pulls.mdx
+++ b/docs/api-reference/introspection/historical-pulls.mdx
@@ -17,17 +17,86 @@ This would be the case if any of the top selected users had no available resourc
 
 ## Response Structure
 
-- `data`: An array containing user information, including data from different providers.
-  - `user_id`: The unique identifier of the user.
-  - `provider`: Object containing provider-specific data.
-    - `<provider_slug>`: Provider-specific data structure.
-      - `pulled`: JSON containing information about pulled resources
-        - `status`: Information about the status of historical pull. 
-        - `range_start`: Timestamp of the beginning of the requested range
-        - `range_end`: Timestamp of the end of the requested range
-        - `days_with_data`: Number of days within this range that contained data
-        - `release`: Release version of Vital API
-        - `trace_id`: Unique identifier, that would allow a Vital engineer to investigate a potential failed pull
-     - `not_pulled`: List of resources that were not pulled
+<ResponseField name="data" type="object[]" required>
+  An array containing user information, including data from different providers.
 
-- `next`: A cursor for the next page of results, or `null` if there are no more pages.
+  <Expandable defaultOpen>
+    <ResponseField name="user_id" type="string" required>
+      The unique identifier of the user.
+    </ResponseField>
+
+    <ResponseField name="provider" type="Map<string, object>" required>
+      A map where each key-value pair describes the historical pull status of a specific provider.
+
+      <Expandable defaultOpen>
+        <ResponseField name="{PROVIDER_SLUG}" type="object" required>
+          the historical pull status of a specific provider, keyed by the provider slug.
+
+          <Expandable defaultOpen>
+            <ResponseField name="pulled" type="object" required>
+              Resources which have been pulled.
+
+              <Expandable defaultOpen>
+                <ResponseField name="{RESOURCE}" type="object" required>
+                  The historical pull status of a resource with this provider, keyed by the resource type.
+
+                  
+                  <Expandable defaultOpen>
+                    <ResponseField name="status" type="object" required>
+                      The status of historical pull.
+
+                      Possible value: `scheduled`, `in_progress`, `success`, `error`, `failure`
+                    </ResponseField>
+
+                    <ResponseField name="range_start" type="string">
+                      The start timestamp from which historical data would be pulled.
+                    </ResponseField>
+
+                    <ResponseField name="range_end" type="string">
+                      The end timestamp to which data would be pulled.
+                    </ResponseField>
+
+                    <ResponseField name="days_with_data" type="number" required>
+                      The number of days having data within the pull range (`[range_start, range_end]`).
+                    </ResponseField>
+
+                    <ResponseField name="timeline" type="object" required>
+                      <Expandable defaultOpen>
+                        <ResponseField name="scheduled_at" type="string">
+                          The time when the historical pull was scheduled to start.
+                        </ResponseField>
+
+                        <ResponseField name="started_at" type="string">
+                          The time when the historical pull had started.
+                        </ResponseField>
+
+                        <ResponseField name="ended_at" type="string">
+                          The time when the historical pull had completed in full, with all
+                          relevants `historical.data.*.created` events having been sent.
+                        </ResponseField>
+                      </Expandable>
+                    </ResponseField>
+
+                    <ResponseField name="release" type="object" required>
+                      The Vital API release version which this historical pull was executed on.
+                    </ResponseField>
+
+                    <ResponseField name="trace_id" type="object">
+                      A Vital trace ID for internal troubleshooting.
+                    </ResponseField>
+                  </Expandable>     
+                </ResponseField>
+              </Expandable>              
+            </ResponseField>
+
+            <ResponseField name="not_pulled" type="string[]" required>
+              Resources which had not been pulled. This could be a result of the lack of user permission,
+              or that the resource was introduced after the connection had established.
+            </ResponseField>
+          </Expandable>
+        </ResponseField>
+      </Expandable>
+    </ResponseField>
+  </Expandable>
+</ResponseField>
+
