Add AOE docs to changelog

--- a/docs/changelog/lab-testing/api.mdx
+++ b/docs/changelog/lab-testing/api.mdx
@@ -1,3 +1,12 @@
 ---
-title: "Lab Testing API"
+title: "API"
 ---
+
+### Ask on Order Entry (AOE)  (Jun 3)
+You can now order panels with AOE requirements via the API.
+
+<Accordion icon="billboard" iconType="duotone" title="Details" defaultOpen>
+Check out the [AOE](/lab/workflow/aoe) documentation.
+
+</Accordion>
+
