--- a/docs/event-catalog/daily.data.steps.updated.mdx
+++ b/docs/event-catalog/daily.data.steps.updated.mdx
@@ -21,8 +21,8 @@ Constant: `daily.data.steps.updated`
 </ResponseField>
 <ResponseField name="data" type="TimeseriesData" required="true">
 <Expandable title="TimeseriesData" defaultOpen="true">
-<ResponseField name="data" type="ClientFacingIntervalSample[]" required="true">
-<Expandable title="Item Schema: ClientFacingIntervalSample" defaultOpen="true">
+<ResponseField name="data" type="ClientFacingStepsTimeseries[]" required="true">
+<Expandable title="Item Schema: ClientFacingStepsTimeseries" defaultOpen="true">
 <ResponseField name="id" type="anyOf | null">
 Deprecated
 Any of:
@@ -41,8 +41,8 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="unit" type="string" required="true">
-The unit of the value. We use SI units where possible, e.g. mmol/L for glucose/cholesterol, bpm for heart rate, etc.
+<ResponseField name="unit" type="const string" required="true">
+Constant: `count`Measured in counts
 </ResponseField>
 <ResponseField name="timestamp" type="string" required="true">
 Depracated. The start time (inclusive) of the interval.
@@ -54,7 +54,7 @@ The start time (inclusive) of the interval.
 The end time (exclusive) of the interval.
 </ResponseField>
 <ResponseField name="value" type="number" required="true">
-The recorded value for the interval.
+The number of steps sampled at the time or interval::count
 </ResponseField>
 </Expandable>
 </ResponseField>
@@ -74,14 +74,14 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="name" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
+<ResponseField name="slug" type="string" required="true" deprecated>
+Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="logo" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
 </ResponseField>
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "7557d2c4-3f4c-452c-a166-c9646cf1dcd3"
+    "user_id": "2e08b072-4969-4bff-b1c7-fdf7ba27fb6c"
   },
   "event_type": "daily.data.steps.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
