--- a/docs/event-catalog/daily.data.vo2_max.updated.mdx
+++ b/docs/event-catalog/daily.data.vo2_max.updated.mdx
@@ -21,8 +21,8 @@ Constant: `daily.data.vo2_max.updated`
 </ResponseField>
 <ResponseField name="data" type="TimeseriesData" required="true">
 <Expandable title="TimeseriesData" defaultOpen="true">
-<ResponseField name="data" type="ClientFacingIntervalSample[]" required="true">
-<Expandable title="Item Schema: ClientFacingIntervalSample" defaultOpen="true">
+<ResponseField name="data" type="ClientFacingVO2MaxTimeseries[]" required="true">
+<Expandable title="Item Schema: ClientFacingVO2MaxTimeseries" defaultOpen="true">
 <ResponseField name="id" type="anyOf | null">
 Deprecated
 Any of:
@@ -42,7 +42,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="unit" type="string" required="true">
-The unit of the value. We use SI units where possible, e.g. mmol/L for glucose/cholesterol, bpm for heart rate, etc.
+Measured in mL/kg/min.
 </ResponseField>
 <ResponseField name="timestamp" type="string" required="true">
 Depracated. The start time (inclusive) of the interval.
@@ -74,14 +74,14 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="name" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
+<ResponseField name="slug" type="string" required="true" deprecated>
+Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="logo" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
 </ResponseField>
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "fbebb798-8cb0-4ab6-9872-5a2e4ea65646"
+    "user_id": "7facd9e7-6282-4fe8-95b1-fa25c531dcbb"
   },
   "event_type": "daily.data.vo2_max.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
