--- a/docs/event-catalog/daily.data.caffeine.created.mdx
+++ b/docs/event-catalog/daily.data.caffeine.created.mdx
@@ -21,8 +21,8 @@ Constant: `daily.data.caffeine.created`
 </ResponseField>
 <ResponseField name="data" type="TimeseriesData" required="true">
 <Expandable title="TimeseriesData" defaultOpen="true">
-<ResponseField name="data" type="ClientFacingIntervalSample[]" required="true">
-<Expandable title="Item Schema: ClientFacingIntervalSample" defaultOpen="true">
+<ResponseField name="data" type="ClientFacingCaffeineTimeseries[]" required="true">
+<Expandable title="Item Schema: ClientFacingCaffeineTimeseries" defaultOpen="true">
 <ResponseField name="id" type="anyOf | null">
 Deprecated
 Any of:
@@ -42,7 +42,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="unit" type="string" required="true">
-The unit of the value. We use SI units where possible, e.g. mmol/L for glucose/cholesterol, bpm for heart rate, etc.
+Measured in grams.
 </ResponseField>
 <ResponseField name="timestamp" type="string" required="true">
 Depracated. The start time (inclusive) of the interval.
@@ -54,7 +54,7 @@ The start time (inclusive) of the interval.
 The end time (exclusive) of the interval.
 </ResponseField>
 <ResponseField name="value" type="number" required="true">
-The recorded value for the interval.
+Quantity of caffeine consumed during the time period.
 </ResponseField>
 </Expandable>
 </ResponseField>
@@ -74,14 +74,14 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="name" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
+<ResponseField name="slug" type="string" required="true" deprecated>
+Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="logo" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
 </ResponseField>
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "f80c8ef8-e14d-4cfb-bd8a-1aea8d2ba96e"
+    "user_id": "6668dd11-f929-4061-a597-78a6f83ba957"
   },
   "event_type": "daily.data.caffeine.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
