--- a/docs/event-catalog/daily.data.electrocardiogram_voltage.updated.mdx
+++ b/docs/event-catalog/daily.data.electrocardiogram_voltage.updated.mdx
@@ -21,8 +21,8 @@ Constant: `daily.data.electrocardiogram_voltage.updated`
 </ResponseField>
 <ResponseField name="data" type="TimeseriesData" required="true">
 <Expandable title="TimeseriesData" defaultOpen="true">
-<ResponseField name="data" type="ClientFacingTimeseries[]" required="true">
-<Expandable title="Item Schema: ClientFacingTimeseries" defaultOpen="true">
+<ResponseField name="data" type="ClientFacingElectrocardiogramVoltageTimeseries[]" required="true">
+<Expandable title="Item Schema: ClientFacingElectrocardiogramVoltageTimeseries" defaultOpen="true">
 <ResponseField name="id" type="anyOf | null">
 Deprecated
 Any of:
@@ -35,14 +35,11 @@ Any of:
 * integer
 * null
 </ResponseField>
-<ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
-Any of:
-* string
-* null
+<ResponseField name="type" type="string | null">
+The lead of the measurement.
 </ResponseField>
 <ResponseField name="unit" type="string" required="true">
-The unit of the value. We use SI units where possible, e.g. mmol/L for glucose/cholesterol, bpm for heart rate, etc.
+Measured in mV.
 </ResponseField>
 <ResponseField name="timestamp" type="string" required="true">
 The timestamp of the measurement.
@@ -68,14 +65,14 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="name" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
+<ResponseField name="slug" type="string" required="true" deprecated>
+Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="logo" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
 </ResponseField>
@@ -120,7 +117,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "c5fafe19-14bd-45be-8a73-04133ef5d132"
+    "user_id": "17cf5d3d-4845-4f0d-945c-65335bfebeef"
   },
   "event_type": "daily.data.electrocardiogram_voltage.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
