--- a/docs/event-catalog/daily.data.floors_climbed.created.mdx
+++ b/docs/event-catalog/daily.data.floors_climbed.created.mdx
@@ -21,8 +21,8 @@ Constant: `daily.data.floors_climbed.created`
 </ResponseField>
 <ResponseField name="data" type="TimeseriesData" required="true">
 <Expandable title="TimeseriesData" defaultOpen="true">
-<ResponseField name="data" type="ClientFacingIntervalSample[]" required="true">
-<Expandable title="Item Schema: ClientFacingIntervalSample" defaultOpen="true">
+<ResponseField name="data" type="ClientFacingFloorsClimbedTimeseries[]" required="true">
+<Expandable title="Item Schema: ClientFacingFloorsClimbedTimeseries" defaultOpen="true">
 <ResponseField name="id" type="anyOf | null">
 Deprecated
 Any of:
@@ -41,20 +41,14 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="unit" type="string" required="true">
-The unit of the value. We use SI units where possible, e.g. mmol/L for glucose/cholesterol, bpm for heart rate, etc.
+<ResponseField name="unit" type="const string" required="true">
+Constant: `count`Measured in counts
 </ResponseField>
 <ResponseField name="timestamp" type="string" required="true">
-Depracated. The start time (inclusive) of the interval.
-</ResponseField>
-<ResponseField name="start" type="string" required="true">
-The start time (inclusive) of the interval.
-</ResponseField>
-<ResponseField name="end" type="string" required="true">
-The end time (exclusive) of the interval.
+The timestamp of the measurement.
 </ResponseField>
 <ResponseField name="value" type="number" required="true">
-The recorded value for the interval.
+Number of floors climbed at the time or interval::count
 </ResponseField>
 </Expandable>
 </ResponseField>
@@ -74,14 +68,14 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="name" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
+<ResponseField name="slug" type="string" required="true" deprecated>
+Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="logo" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
 </ResponseField>
@@ -127,7 +121,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "597bbe65-78da-42a4-a83a-ac2bc106a68a"
+    "user_id": "3fd89f09-0c4b-46c3-9b81-4eaf9e444e9a"
   },
   "event_type": "daily.data.floors_climbed.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
