--- a/docs/event-catalog/daily.data.hypnogram.updated.mdx
+++ b/docs/event-catalog/daily.data.hypnogram.updated.mdx
@@ -21,8 +21,8 @@ Constant: `daily.data.hypnogram.updated`
 </ResponseField>
 <ResponseField name="data" type="TimeseriesData" required="true">
 <Expandable title="TimeseriesData" defaultOpen="true">
-<ResponseField name="data" type="ClientFacingIntervalSample[]" required="true">
-<Expandable title="Item Schema: ClientFacingIntervalSample" defaultOpen="true">
+<ResponseField name="data" type="ClientFacingHypnogramTimeseries[]" required="true">
+<Expandable title="Item Schema: ClientFacingHypnogramTimeseries" defaultOpen="true">
 <ResponseField name="id" type="anyOf | null">
 Deprecated
 Any of:
@@ -42,7 +42,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="unit" type="string" required="true">
-The unit of the value. We use SI units where possible, e.g. mmol/L for glucose/cholesterol, bpm for heart rate, etc.
+enum: 1: deep, 2: light, 3: rem, 4: awake, -1: missing_data.
 </ResponseField>
 <ResponseField name="timestamp" type="string" required="true">
 Depracated. The start time (inclusive) of the interval.
@@ -54,7 +54,7 @@ The start time (inclusive) of the interval.
 The end time (exclusive) of the interval.
 </ResponseField>
 <ResponseField name="value" type="number" required="true">
-The recorded value for the interval.
+Hypnogram for sleep stages &lcub;&quot;deep&quot;: 1, &quot;light&quot;: 2, &quot;rem&quot;: 3, &quot;awake&quot;: 4, &quot;manual&quot;: 5, &quot;missing_data&quot;: -1&rcub;
 </ResponseField>
 </Expandable>
 </ResponseField>
@@ -74,14 +74,14 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="name" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
+<ResponseField name="slug" type="string" required="true" deprecated>
+Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="logo" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
 </ResponseField>
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "43cf7d61-3725-4bd4-9352-c286372b6c06"
+    "user_id": "c0e1a45a-a93a-4f72-b296-f65f6628d482"
   },
   "event_type": "daily.data.hypnogram.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
