--- a/docs/event-catalog/daily.data.igg.updated.mdx
+++ b/docs/event-catalog/daily.data.igg.updated.mdx
@@ -21,8 +21,8 @@ Constant: `daily.data.igg.updated`
 </ResponseField>
 <ResponseField name="data" type="TimeseriesData" required="true">
 <Expandable title="TimeseriesData" defaultOpen="true">
-<ResponseField name="data" type="ClientFacingTimeseries[]" required="true">
-<Expandable title="Item Schema: ClientFacingTimeseries" defaultOpen="true">
+<ResponseField name="data" type="ClientFacingIggTimeseries[]" required="true">
+<Expandable title="Item Schema: ClientFacingIggTimeseries" defaultOpen="true">
 <ResponseField name="id" type="anyOf | null">
 Deprecated
 Any of:
@@ -42,7 +42,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="unit" type="string" required="true">
-The unit of the value. We use SI units where possible, e.g. mmol/L for glucose/cholesterol, bpm for heart rate, etc.
+Measured in FSU.
 </ResponseField>
 <ResponseField name="timestamp" type="string" required="true">
 The timestamp of the measurement.
@@ -68,14 +68,14 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="name" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
+<ResponseField name="slug" type="string" required="true" deprecated>
+Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="logo" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
 </ResponseField>
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "504ce4da-be8a-4d8b-8a17-d3e590fde562"
+    "user_id": "69116176-0b53-4868-8af6-b168f24cb657"
   },
   "event_type": "daily.data.igg.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
