--- a/docs/event-catalog/daily.data.respiratory_rate.created.mdx
+++ b/docs/event-catalog/daily.data.respiratory_rate.created.mdx
@@ -21,8 +21,8 @@ Constant: `daily.data.respiratory_rate.created`
 </ResponseField>
 <ResponseField name="data" type="TimeseriesData" required="true">
 <Expandable title="TimeseriesData" defaultOpen="true">
-<ResponseField name="data" type="ClientFacingTimeseries[]" required="true">
-<Expandable title="Item Schema: ClientFacingTimeseries" defaultOpen="true">
+<ResponseField name="data" type="ClientFacingRespiratoryRateTimeseries[]" required="true">
+<Expandable title="Item Schema: ClientFacingRespiratoryRateTimeseries" defaultOpen="true">
 <ResponseField name="id" type="anyOf | null">
 Deprecated
 Any of:
@@ -42,13 +42,13 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="unit" type="string" required="true">
-The unit of the value. We use SI units where possible, e.g. mmol/L for glucose/cholesterol, bpm for heart rate, etc.
+Measured in bpm.
 </ResponseField>
 <ResponseField name="timestamp" type="string" required="true">
 The timestamp of the measurement.
 </ResponseField>
 <ResponseField name="value" type="number" required="true">
-The value of the measurement.
+Average respiratory rate::breaths per minute
 </ResponseField>
 </Expandable>
 </ResponseField>
@@ -68,14 +68,14 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="name" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
+<ResponseField name="slug" type="string" required="true" deprecated>
+Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="logo" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
 </ResponseField>
@@ -121,7 +121,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "dc047060-ea5b-4619-aeda-feb5416edb0c"
+    "user_id": "9936d676-3c66-4e9d-a3a9-323387a07432"
   },
   "event_type": "daily.data.respiratory_rate.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
