--- a/docs/event-catalog/daily.data.water.updated.mdx
+++ b/docs/event-catalog/daily.data.water.updated.mdx
@@ -21,8 +21,8 @@ Constant: `daily.data.water.updated`
 </ResponseField>
 <ResponseField name="data" type="TimeseriesData" required="true">
 <Expandable title="TimeseriesData" defaultOpen="true">
-<ResponseField name="data" type="ClientFacingIntervalSample[]" required="true">
-<Expandable title="Item Schema: ClientFacingIntervalSample" defaultOpen="true">
+<ResponseField name="data" type="ClientFacingWaterTimeseries[]" required="true">
+<Expandable title="Item Schema: ClientFacingWaterTimeseries" defaultOpen="true">
 <ResponseField name="id" type="anyOf | null">
 Deprecated
 Any of:
@@ -42,19 +42,13 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="unit" type="string" required="true">
-The unit of the value. We use SI units where possible, e.g. mmol/L for glucose/cholesterol, bpm for heart rate, etc.
+Measured in milliters.
 </ResponseField>
 <ResponseField name="timestamp" type="string" required="true">
-Depracated. The start time (inclusive) of the interval.
-</ResponseField>
-<ResponseField name="start" type="string" required="true">
-The start time (inclusive) of the interval.
-</ResponseField>
-<ResponseField name="end" type="string" required="true">
-The end time (exclusive) of the interval.
+The timestamp of the measurement.
 </ResponseField>
 <ResponseField name="value" type="number" required="true">
-The recorded value for the interval.
+Quantity of water drank during the time period.
 </ResponseField>
 </Expandable>
 </ResponseField>
@@ -74,14 +68,14 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="name" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
+<ResponseField name="slug" type="string" required="true" deprecated>
+Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true">
-[⚠️ Deprecated] Deprecated. Subject to removal after 1 Jan 2024.
+<ResponseField name="logo" type="string" required="true" deprecated>
+Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
 </ResponseField>
@@ -127,7 +121,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "684b9986-150e-47e3-ad62-e557091c0d19"
+    "user_id": "d11f79b6-37be-4f92-8e01-05a019aaf9ff"
   },
   "event_type": "daily.data.water.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
