--- a/docs/event-catalog/daily.data.workout_stream.unavailable.mdx
+++ b/docs/event-catalog/daily.data.workout_stream.unavailable.mdx
@@ -26,8 +26,8 @@ Constant: `daily.data.workout_stream.unavailable`
 </ResponseField>
 <ResponseField name="message" type="string" required="true">
 </ResponseField>
-<ResponseField name="source" type="ClientFacingProvider" required="true">
-[⚠️ Deprecated] Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
+<ResponseField name="source" type="ClientFacingProvider" required="true" deprecated>
+Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 <Expandable title="ClientFacingProvider" defaultOpen="true">
 <ResponseField name="name" type="string" required="true">
 Name of source of information
