--- a/docs/event-catalog/provider.connection.created.mdx
+++ b/docs/event-catalog/provider.connection.created.mdx
@@ -16,8 +16,8 @@ Constant: `provider.connection.created`
 <Expandable title="ProviderConnectionCreated" defaultOpen="true">
 <ResponseField name="user_id" type="string" required="true">
 </ResponseField>
-<ResponseField name="source" type="ClientFacingProvider" required="true">
-[⚠️ Deprecated] Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
+<ResponseField name="source" type="ClientFacingProvider" required="true" deprecated>
+Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 <Expandable title="ClientFacingProvider" defaultOpen="true">
 <ResponseField name="name" type="string" required="true">
 Name of source of information
