--- a/docs/changelog/lab-testing/api.mdx
+++ b/docs/changelog/lab-testing/api.mdx
@@ -2,6 +2,18 @@
 title: "API"
 ---
 
+### Patient Service Center (PSC) Availability Information API (Jun 11)
+It is now possible to obtain PSC location and availability data from the API.
+
+<Accordion icon="billboard" iconType="duotone" title="Details" defaultOpen>
+In the [area info](/api-reference/lab-testing/area-info) endpoint, you can obtain the number of PSC's per lab in a 25km radius of the provided zip code.
+
+In the [PSC data](/api-reference/lab-testing/psc-info) endpoint, you can query details regarding the PSC's in a 25km radius of the provided zip code and lab.
+
+Similarly, in the [PSC order data](/api-reference/lab-testing/order-psc-info) endpoint, you can query PSC data with regards to the provided order's zip code and lab.
+
+</Accordion>
+
 ### Ask on Order Entry (AOE)  (Jun 3)
 You can now order panels with AOE requirements via the API.
 
