--- a/docs/api-reference/lab-testing/order-psc-info.mdx
+++ b/docs/api-reference/lab-testing/order-psc-info.mdx
@@ -6,7 +6,7 @@ openapi: "GET /v3/order/{order_id}/psc/info"
 
 ```bash cURL
 curl --request GET \
-     --url '{{BASE_URL}}/v3/order/{{ORDER_ID}}/psc/info \
+     --url '{{BASE_URL}}/v3/order/{{ORDER_ID}}/psc/info' \
      --header 'accept: application/json' \
      --header 'x-vital-api-key: {YOUR_KEY}'
 ```
